txt-output/20.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: there are several ways to fix the program. No oracle given.
test = xs : "def"
       where xs = "abc"

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\20.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\20.hs:6:12:
    Couldn't match expected type `[Char]' against inferred type `Char'
      Expected type: [[Char]]
      Inferred type: [Char]
    In the second argument of `(:)', namely `"def"'
    In the expression: xs : "def"


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\20.hs, ill-typed\20.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\20.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\20.hs:6:13: error:
    * Couldn't match type `Char' with `[Char]'
      Expected: [String]
        Actual: String
    * In the second argument of `(:)', namely `"def"'
      In the expression: xs : "def"
      In an equation for `test':
          test
            = xs : "def"
            where
                xs = "abc"
  |
6 | test = xs : "def"
  |             ^^^^^
